--- a/src/html/4_footer.html
+++ b/src/html/4_footer.html
@@ -1,7 +1,14 @@
 <footer id="footer" class="footer">
    <div class="footer__container">
       <div class="footer__body">
-
+         <a href="index.html" class="footer__logo" aria-label="на главную">
+            <img src="@img/svg/logo.svg" alt="логотип Банкротное Бюро Про">
+         </a>
+         <div class="footer__privacy-policy">
+            Все права защищены. Не является публичной офертой.
+            <a href="privacy-policy.html">Политика Конфиденциальности</a>
+         </div>
+         <small class="footer__copyright">г. Йошкар-Ола © 2025</small>
       </div>
    </div>
 </footer>
