--- a/src/html/Advantage/Advantage.html
+++ b/src/html/Advantage/Advantage.html
@@ -1,4 +1,4 @@
-<section class="advantage">
+<section class="advantage background-section">
    <div class="advantage__container">
       <div class="advantage__title title-section">Преимущества</div>
       <ol class="advantage__list">
@@ -27,7 +27,9 @@
             <span>А еще не создаем проблем с прожиточным минимумом, защищаем имущество и доходы клиента, можем собрать документы и написать заявление за вас</span>
          </li>
       </ol>
-
+      <button class="advantage__button button-transparent" type="button">
+         <span>узнать больше</span>
+         <img src="@img/svg/question.svg" alt="вопросительный знак">
+      </button>
    </div>
-
 </section>
