--- a/src/html/First-Screen/First-Screen.html
+++ b/src/html/First-Screen/First-Screen.html
@@ -6,7 +6,7 @@
             <div class="first-screen__content">
                <h1 class="first-screen__title">Надежный сервис для специалистов по банкротству</h1>
                <div class="first-screen__text">Зарабатывайте на банкротстве, а процедурную рутину мы возьмем на себя. Для юристов и юридических компаний любого масштаба.</div>
-               <div class="first-screen__button">
+               <div class="first-screen__button button-transparent">
                   <span>оставить заявку</span>
                   <img src="@img/svg/icon-pencil.svg" alt="иконка карандашь" aria-hidden="true">
                </div>
