--- a/src/html/Submit-Application/Submit-Application.html
+++ b/src/html/Submit-Application/Submit-Application.html
@@ -1,8 +1,11 @@
 <section class="submit-application">
    <div class="submit-application__container">
-      <h2 class="submit-application__title title-section">Забыть о рутине</h2>
+      <h2 class="title-section">@@title</h2>
+      @@if(context.text === true){
       <div class="submit-application__text text-section">Банкротное Бюро pro – это команда опытных арбитражных управляющих и юристов высшей квалификации.</div>
+      }
       <form action="#" method="post" name="submit-application" id="submit-application">
+
          <div class="submit-application__form">
             <div class="submit-application__form-block">
                <label>
