--- a/src/html/Button-Menu/Button-Menu.html
+++ b/src/html/Button-Menu/Button-Menu.html
@@ -1,4 +1,4 @@
-<button class="button-menu" type="button">
+<button class="open-menu" type="button" aria-label="открыть меню">
    <span class="line line-top"></span>
    <span class="line line-center"></span>
    <span class="line line-bottom"></span>
