--- a/src/html/First-Screen/First-Screen.html
+++ b/src/html/First-Screen/First-Screen.html
@@ -1,7 +1,6 @@
 <section class="first-screen">
    <div class="first-screen__container">
-
-      <div class="first-screen__shell">
+      <div id="first-screen-animate" class="first-screen__shell">
          <div class="first-screen__body">
             <div class="first-screen__content">
                <h1 class="first-screen__title">Надежный сервис для специалистов по банкротству</h1>
@@ -16,7 +15,5 @@
          <div class="first-screen__line first-screen__line-1"></div>
          <div class="first-screen__line first-screen__line-2"></div>
       </div>
-
-
    </div>
 </section>
