--- a/src/html/4_footer.html
+++ b/src/html/4_footer.html
@@ -1,14 +1,20 @@
 <footer id="footer" class="footer">
    <div class="footer__container">
       <div class="footer__body">
-         <a href="index.html" class="footer__logo" aria-label="на главную">
-            <img src="@img/svg/logo.svg" alt="логотип Банкротное Бюро Про">
-         </a>
-         <div class="footer__privacy-policy">
-            Все права защищены. Не является публичной офертой.
-            <a href="privacy-policy.html">Политика Конфиденциальности</a>
+
+         <div class="footer__shell">
+            <a href="index.html" class="footer__logo" aria-label="на главную">
+               <img src="@img/svg/logo-2.svg" alt="логотип Банкротное Бюро Про">
+            </a>
+            <div class="footer__privacy-policy">
+               <span>Все права защищены. </span>
+               <span>Не является публичной офертой. </span>
+               <a href="privacy-policy.html">Политика Конфиденциальности</a>
+            </div>
          </div>
+
          <small class="footer__copyright">г. Йошкар-Ола © 2025</small>
+
       </div>
    </div>
 </footer>
