--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 
    <div class="wrapper">
 
-      <!-- @@include('html/2_header.html',{}) -->
+      @@include('html/2_header.html',{})
 
       <div class="main">
 
-         <!-- @@include('html/First-Screen/First-Screen.html',{}) -->
+         @@include('html/First-Screen/First-Screen.html',{})
 
          @@include('html/Submit-Application/Submit-Application.html',{"title": "Забыть о рутине", "text": true})
 
@@ -28,16 +28,18 @@
 
          @@include('html/Price/Price.html',{})
 
-         <!-- @@include('html/Submit-Application/Submit-Application.html',{"title": "Не стоит ждать"}) -->
+         @@include('html/Submit-Application/Submit-Application.html',{"title": "Не стоит ждать"})
 
-         <!-- @@include('html/Contacts/Contacts.html',{}) -->
+         @@include('html/Contacts/Contacts.html',{})
 
       </div>
 
-      <!-- @@include('html/4_footer.html',{}) -->
+      @@include('html/4_footer.html',{})
 
    </div>
 
+   @@include('html/Modal/Modal-Callback.html',{})
+   @@include('html/Modal/Modal-Send.html',{})
 
    @@include('html/3_scripts.html',{
    swiper: false,
