--- a/src/html/Info-Block/Info-Block.html
+++ b/src/html/Info-Block/Info-Block.html
@@ -23,5 +23,8 @@
             <div class="info-block__cell-text">Граждан, предпочитающих самостоятельное банкротство</div>
          </div>
       </div>
+
+      <div class="info-block__vertical-line line-move"></div>
+
    </div>
 </section>
