--- a/src/html/First-Screen/First-Screen.html
+++ b/src/html/First-Screen/First-Screen.html
@@ -2,18 +2,25 @@
    <div class="first-screen__container">
       <div id="first-screen-animate" class="first-screen__shell">
          <div class="first-screen__body">
-            <div class="first-screen__content">
-               <h1 class="first-screen__title">Надежный сервис для специалистов по банкротству</h1>
-               <div class="first-screen__text">Зарабатывайте на банкротстве, а процедурную рутину мы возьмем на себя. Для юристов и юридических компаний любого масштаба.</div>
-               <div class="first-screen__button button-transparent">
-                  <span>оставить заявку</span>
-                  <img src="@img/svg/icon-pencil.svg" alt="иконка карандашь" aria-hidden="true">
-               </div>
-            </div>
+
+
+
             <img class="first-screen__background" src="@img/jpg/image-1.jpg" alt="фон" aria-hidden="true">
          </div>
          <div class="first-screen__line first-screen__line-1"></div>
          <div class="first-screen__line first-screen__line-2"></div>
       </div>
+
+
+      <div class="first-screen__content" data-da=".first-screen__body,0,780">
+         <h1 class="first-screen__title">Надежный сервис для специалистов по банкротству</h1>
+         <div class="first-screen__text">Зарабатывайте на банкротстве, а процедурную рутину мы возьмем на себя. Для юристов и юридических компаний любого масштаба.</div>
+         <div class="first-screen__button button-transparent">
+            <span>оставить заявку</span>
+            <img src="@img/svg/icon-pencil.svg" alt="иконка карандашь" aria-hidden="true">
+         </div>
+      </div>
+
+
    </div>
 </section>
