--- a/src/html/Modal/Modal-Send.html
+++ b/src/html/Modal/Modal-Send.html
@@ -1,4 +1,4 @@
-<div id="send" class="modal js-modal-hidden js-modal-close js-modal-visible">
+<div id="send" class="modal js-modal-hidden js-modal-close"><!--  js-modal-visible -->
    <div class="modal__container">
       <div class="modal__body modal__send js-modal-stop-close">
          <div class="modal__text">
