--- a/src/html/About/About.html
+++ b/src/html/About/About.html
@@ -1,4 +1,4 @@
-<section class="about background-section">
+<section id="about" class="about background-section">
    <div class="about__container">
       <div class="about__title title-section">Кто мы?</div>
       <div class="about__text text-section">Мы знаем, как важно сосредоточиться на том, что умеешь лучше всего, поэтому помогаем в ведении дел целым штатом экспертов: арбитражные управляющие, банкротные юристы, эксперты, адвокаты, специалисты.</div>
