--- a/src/html/Advantage/Advantage.html
+++ b/src/html/Advantage/Advantage.html
@@ -31,5 +31,9 @@
          <span>узнать больше</span>
          <img src="@img/svg/question.svg" alt="вопросительный знак">
       </button>
+
+      <div class="advantage__line-1" data-speed="0.8"></div>
+      <div class="advantage__line-2" data-speed="0.9"></div>
+
    </div>
 </section>
