--- a/src/html/Feedback/Feedback.html
+++ b/src/html/Feedback/Feedback.html
@@ -1,4 +1,4 @@
-<section class="feedback">
+<section id="feedback" class="feedback">
    <div class="feedback__container">
       <div class="feedback__title title-section">Отзывы</div>
       <div class="feedback__grid">
