--- a/src/html/Info-Block/Info-Block.html
+++ b/src/html/Info-Block/Info-Block.html
@@ -1,4 +1,4 @@
-<section class="info-block">
+<section id="benefit" class="info-block">
    <div class="info-block__container">
       <h2 class="title-section">Для кого?</h2>
       <div class="info-block__text text-section">Банкротное Бюро pro – это сервис и для профессионалов, и для начинающих специалистов. Обладаем большим опытом создания и управления юридическими компаниями, которым мы готовы поделиться для расширения вашего любимого дела.</div>
@@ -24,7 +24,8 @@
          </div>
       </div>
 
-      <div class="info-block__vertical-line line-move"></div>
+      <div class="info-block__line-1" data-speed="0.7"></div>
+      <div class="info-block__line-2" data-speed="0.6"></div>
 
    </div>
 </section>
