--- a/src/html/Price/Price.html
+++ b/src/html/Price/Price.html
@@ -1,4 +1,4 @@
-<section class="price">
+<section id="price" class="price">
    <div class="price__container">
       <div class="price__title title-section">Цены</div>
 
@@ -50,7 +50,8 @@
          </div>
       </div>
 
-
+      <div class="price__line-1" data-speed="0.6"></div>
+      <div class="price__line-2" data-speed="0.7"></div>
 
    </div>
 </section>
