--- a/src/html/Contacts/Contacts.html
+++ b/src/html/Contacts/Contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section id="contact" class="contacts">
    <div class="contacts__container">
       <h2 class="contacts__title title-section">Контакты</h2>
       <div class="contacts__body">
