--- a/src/html/First-Screen/First-Screen.html
+++ b/src/html/First-Screen/First-Screen.html
@@ -7,8 +7,8 @@
 
             <img class="first-screen__background" src="@img/jpg/image-1.jpg" alt="фон" aria-hidden="true">
          </div>
-         <div class="first-screen__line first-screen__line-1"></div>
-         <div class="first-screen__line first-screen__line-2"></div>
+         <div class="first-screen__line first-screen__line-1" data-speed="0.6"></div>
+         <div class="first-screen__line first-screen__line-2" data-speed="0.5"></div>
       </div>
 
 
